--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="signIn_protected_info">Sign in is protected by Google reCAPTCHA to ensure you\'re not a bot. Learn more</string>
 </resources>
