--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="signIn_protected_info">Sign in is protected by Google reCAPTCHA to ensure you’re not a bot. Learn more.</string>
     <string-array name="months">
         <item>January</item>
         <item>February</item>
@@ -14,7 +15,4 @@
         <item>November</item>
         <item>December</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="signIn_protected_info">Sign in is protected by Google reCAPTCHA to ensure you\'re not a bot. Learn more</string>
 </resources>
