--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,21 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="accounts_edit_ic_desc">edit icon</string>
+    <string name="accounts_logo_desc">Logo</string>
+    <string name="accounts_who_s_watching">Who\'s Watching?</string>
+    <string name="txtAccountExists">Looks like that account already exists. Sign into that account or try using a different email.</string>
+    <string name="titleCreateAccount"><![CDATA[Unlimited movies, TV shows & more]]></string>
+    <string name="create_account_desc">Create an account and we\'ll send you an email with everything you need to know about Netflix.</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="netflix_offer_email">Please do not email me Netflix special offers.</string>
+    <string name="create_account">CREATE ACCOUNT</string>
+    <string name="downloads">Downloads</string>
+    <string name="smart_downloads">Smart Downloads</string>
+    <string name="img_rcy_header">RcyHeader</string>
+    <string name="turn_on_downloads">Turn on Downloads for You</string>
+    <string name="downloadsDesc">We\'ll download movies and shows just for you, so you\'ll always have something to watch</string>
+    <string name="set_up">Set Up</string>
+    <string name="find_more_to_download">Find More to Download</string>
 </resources>
